erDiagram
    users {
        BIGINT id PK
        VARCHAR username UK
        VARCHAR email UK
        VARCHAR password
        VARCHAR role
        TIMESTAMP created_at
    }

    journal_entries {
        BIGINT id PK
        VARCHAR title
        TEXT content
        VARCHAR mood_type
        INT mood_intensity
        TIMESTAMP created_at
        TIMESTAMP updated_at
        BIGINT user_id FK
    }

    prompts {
        BIGINT id PK
        TEXT question
        TIMESTAMP created_at
    }

    entry_responses {
        BIGINT id PK
        TEXT response_text
        BIGINT entry_id FK
        BIGINT prompt_id FK
        TIMESTAMP created_at
    }

    users ||--o{ journal_entries : has
    journal_entries ||--o{ entry_responses : has
    prompts ||--o{ entry_responses : used_by
